<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/applicationBackground"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#CCC"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/formBackground"
        style="@style/formBackground">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/formElements"
        style="@style/formElements">

        <ImageView
            android:id="@+id/formIcon"
            app:srcCompat="@drawable/ic_contacts_white_72dp"
            style="@style/formIcon" />

        <TextView
            android:id="@+id/formTitle"
            android:text="@string/formTitle"
            style="@style/formTitle" />

        <EditText
            android:id="@+id/formNome"
            android:hint="@string/formNome"
            android:drawableStart="@drawable/ic_assignment_ind_black_24dp"
            style="@style/formEditText"/>

        <EditText
            android:id="@+id/formEndereco"
            android:hint="@string/formEndereco"
            android:drawableStart="@drawable/ic_home_black_24dp"
            style="@style/formEditText"/>

        <EditText
            android:id="@+id/formEstado"
            android:hint="@string/formEstado"
            android:drawableStart="@drawable/ic_domain_black_24dp"
            style="@style/formEditText"/>

        <EditText
            android:id="@+id/formCidade"
            android:hint="@string/formCidade"
            android:drawableStart="@drawable/ic_location_city_black_24dp"
            style="@style/formEditText"/>

        <EditText
            android:id="@+id/formTelefone"
            android:hint="@string/formTelefone"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            style="@style/formEditText"/>

        <EditText
            android:id="@+id/formEmail"
            android:hint="@string/formEmail"
            android:drawableStart="@drawable/ic_email_black_24dp"
            style="@style/formEditText"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/formButton" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>